--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -38,6 +39,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.11.0
   animated_splash_screen: ^1.3.0
+  audioplayers: ^0.20.1
+  audioplayer: ^0.8.1
+use-material-design:  true
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +50,7 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   remove_alpha_ios: true
-  image_path: "assets/images/Spontify.png"    
+  image_path: "assets/j.png"    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -68,7 +72,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets: 
-        - assets/images/
+        - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
